feat: added acceptedForFight endpoint
