# server/swagger_output.json
@@ -5570,6 +5570,304 @@
         }
       }
     },
+    "/api/competition/acceptPairFight": {
+      "patch": {
+        "tags": [
+          "Competitions"
+        ],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Competition"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Competition"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Client error.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {}
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {}
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            },
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {}
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized error.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            },
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "string"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "403": {
+            "description": "Permissions error.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            },
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "string"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found error.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            },
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "string"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            },
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "string"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "competitionId": {
+                    "type": "string"
+                  },
+                  "groupId": {
+                    "type": "string"
+                  },
+                  "pairId": {
+                    "type": "string"
+                  },
+                  "userId": {
+                    "type": "string"
+                  }
+                },
+                "required": [
+                  "pairId",
+                  "groupId",
+                  "competitionId",
+                  "userId"
+                ]
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/competition/setJudgesToCompetition": {
       "patch": {
         "tags": [
@@ -6762,7 +7060,7 @@
         "tags": [
           "Competitions"
         ],
-        "description": "Редактировать смогут только разработчики, будет удалено из апи перед релизом. Не использовать в коде.",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -9175,8 +9473,16 @@
                       "calledForPreparation": {
                         "type": "boolean"
                       },
-                      "calledForFight": {
-                        "type": "boolean"
+                      "acceptedForFight": {
+                        "type": "object",
+                        "properties": {
+                          "blackParticipant": {
+                            "type": "boolean"
+                          },
+                          "whiteParticipant": {
+                            "type": "boolean"
+                          }
+                        }
                       },
                       "judge": {
                         "type": "string",
@@ -9218,8 +9524,16 @@
                       "calledForPreparation": {
                         "type": "boolean"
                       },
-                      "calledForFight": {
-                        "type": "boolean"
+                      "acceptedForFight": {
+                        "type": "object",
+                        "properties": {
+                          "blackParticipant": {
+                            "type": "boolean"
+                          },
+                          "whiteParticipant": {
+                            "type": "boolean"
+                          }
+                        }
                       },
                       "judge": {
                         "type": "string",
@@ -9306,17 +9620,6 @@
               },
               "gender": {
                 "type": "string"
-              }
-            }
-          },
-          "lastOrder": {
-            "type": "object",
-            "properties": {
-              "group": {
-                "type": "number"
-              },
-              "pair": {
-                "type": "number"
               }
             }
           },
@@ -9540,8 +9843,16 @@
                 "calledForPreparation": {
                   "type": "boolean"
                 },
-                "calledForFight": {
-                  "type": "boolean"
+                "acceptedForFight": {
+                  "type": "object",
+                  "properties": {
+                    "blackParticipant": {
+                      "type": "boolean"
+                    },
+                    "whiteParticipant": {
+                      "type": "boolean"
+                    }
+                  }
                 },
                 "judge": {
                   "type": "string",
@@ -9583,8 +9894,16 @@
                 "calledForPreparation": {
                   "type": "boolean"
                 },
-                "calledForFight": {
-                  "type": "boolean"
+                "acceptedForFight": {
+                  "type": "object",
+                  "properties": {
+                    "blackParticipant": {
+                      "type": "boolean"
+                    },
+                    "whiteParticipant": {
+                      "type": "boolean"
+                    }
+                  }
                 },
                 "judge": {
                   "type": "string",
@@ -9629,8 +9948,16 @@
           "calledForPreparation": {
             "type": "boolean"
           },
-          "calledForFight": {
-            "type": "boolean"
+          "acceptedForFight": {
+            "type": "object",
+            "properties": {
+              "blackParticipant": {
+                "type": "boolean"
+              },
+              "whiteParticipant": {
+                "type": "boolean"
+              }
+            }
           },
           "judge": {
             "type": "string",
@@ -9746,8 +10073,16 @@
                       "calledForPreparation": {
                         "type": "boolean"
                       },
-                      "calledForFight": {
-                        "type": "boolean"
+                      "acceptedForFight": {
+                        "type": "object",
+                        "properties": {
+                          "blackParticipant": {
+                            "type": "boolean"
+                          },
+                          "whiteParticipant": {
+                            "type": "boolean"
+                          }
+                        }
                       },
                       "judge": {
                         "type": "string",
@@ -9786,8 +10121,16 @@
                       "calledForPreparation": {
                         "type": "boolean"
                       },
-                      "calledForFight": {
-                        "type": "boolean"
+                      "acceptedForFight": {
+                        "type": "object",
+                        "properties": {
+                          "blackParticipant": {
+                            "type": "boolean"
+                          },
+                          "whiteParticipant": {
+                            "type": "boolean"
+                          }
+                        }
                       },
                       "judge": {
                         "type": "string",
@@ -9868,17 +10211,6 @@
               },
               "gender": {
                 "type": "string"
-              }
-            }
-          },
-          "lastOrder": {
-            "type": "object",
-            "properties": {
-              "group": {
-                "type": "number"
-              },
-              "pair": {
-                "type": "number"
               }
             }
           },
@@ -10096,8 +10428,16 @@
                 "calledForPreparation": {
                   "type": "boolean"
                 },
-                "calledForFight": {
-                  "type": "boolean"
+                "acceptedForFight": {
+                  "type": "object",
+                  "properties": {
+                    "blackParticipant": {
+                      "type": "boolean"
+                    },
+                    "whiteParticipant": {
+                      "type": "boolean"
+                    }
+                  }
                 },
                 "judge": {
                   "type": "string",
@@ -10136,8 +10476,16 @@
                 "calledForPreparation": {
                   "type": "boolean"
                 },
-                "calledForFight": {
-                  "type": "boolean"
+                "acceptedForFight": {
+                  "type": "object",
+                  "properties": {
+                    "blackParticipant": {
+                      "type": "boolean"
+                    },
+                    "whiteParticipant": {
+                      "type": "boolean"
+                    }
+                  }
                 },
                 "judge": {
                   "type": "string",
@@ -10176,8 +10524,16 @@
           "calledForPreparation": {
             "type": "boolean"
           },
-          "calledForFight": {
-            "type": "boolean"
+          "acceptedForFight": {
+            "type": "object",
+            "properties": {
+              "blackParticipant": {
+                "type": "boolean"
+              },
+              "whiteParticipant": {
+                "type": "boolean"
+              }
+            }
           },
           "judge": {
             "type": "string",
